--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,139 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+
+.timer-main{
+  margin-left: 100px;
+}
+
+.field{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label{
+  font-family: Montserrat;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.value{
+  font-family: Montserrat;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48px;
+  letter-spacing: 0.04em;
+  text-align: left;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+}
+
+.timer{
+  display: flex;
+  gap: 24px;
+  width: 346px;
+  justify-content: space-between;
+  
+}
+
+.input{
+  padding: 0;
+  display: inline;
+  min-width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 1);
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: left;
+}
+
+.input:hover{
+  border: 1px solid rgba(128, 128, 128, 1);
+  
+}
+
+.input:focus{
+  border: 1px solid rgba(78, 117, 255, 1);
+}
+
+.input:disabled{
+  border: 1px solid rgba(128, 128, 128, 1);
+  border:none;
+}
+.btn:disabled{
+  background-color: rgba(207, 207, 207, 1);
+  color: rgba(152, 152, 152, 1);
+  width: 75px;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+  
+}
+
+.btn{
+  background-color: rgba(78, 117, 255, 1);
+  color: rgba(255, 255, 255, 1);
+  width: 75px;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+}
+
+.btn:hover{
+  background-color: rgba(108, 140, 255, 1);
+  color: rgba(255, 255, 255, 1);
+  width: 75px;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+}
+
+.wrapper{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 32px;
+}
+
+.fieldset{
+  max-width: 358px;
+  margin: 0;
+  padding: 0;
+  height: 78px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+
+}
+
+.delay-wrapper{
+  display: flex;
+  flex-direction: column;
+  max-width: 360px;
+  height: 40px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+
+}
+
+.form{
+  margin-left: 100px;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.btn-submit{
+  width: 360px;
+  height: 40px;
 }
